@@ -99,11 +99,6 @@ void GeoDataPoint::setDetail( int det )
     d->m_detail = det;
 }
 
-const Quaternion& GeoDataPoint::quaternion() const
-{
-        return GeoDataCoordinates::quaternion();
-}
-
 GeoDataPoint& GeoDataPoint::operator=( const GeoDataPoint &other )
 {
     GeoDataCoordinates::operator=( other );
